Fixing overflow and styles

--- a/lab3/client/src/components/App/App.scss
+++ b/lab3/client/src/components/App/App.scss
@@ -26,5 +26,6 @@ body {
     background: transparent;
   }
 
+  overflow: hidden;
   user-select: none;
 }
